<resources>

    <!-- Theme -->
    <string name="app_name">GoSynGo</string>

    <!-- Login page -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="button_login">Log In</string>
    <string name="button_register">Register</string>
    <string name="toast_login_success">You have successfully logged in</string>
    <string name="toast_logout_success">You have successfully logged out</string>
    <!-- sichao test -->
    <string name="sichao_test">sichao test</string>
    <!-- Register page -->
    <string name="title_register_display_message">Registration</string>

    <!-- Dashboard page -->
    <string name="title_dashboard_display_message">GoSynGo</string>

</resources>
